--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
   <!-- InstanceBeginEditable name="header" -->
   <a class="current" href="http://yukiyanai.com/">home</a>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red" href="/~yyanai/cv/" target="_top">cv</a>
+  <a class="white-red" href="/cv/" target="_top">cv</a>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red" href="/~yyanai/publications/" target="_top">publications</a>
+  <a class="white-red" href="/publications/" target="_top">publications</a>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
   <!--<a class="white-red" href="/research/" target="_top">research</a>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;-->
-  <a class="white-red" href="/~yyanai/classes/" target="_top">classes</a>
+  <a class="white-red" href="/classes/" target="_top">classes</a>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red" href="/~yyanai/resources/" target="_top">resources</a>
+  <a class="white-red" href="/resources/" target="_top">resources</a>
   <!-- InstanceEndEditable -->
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
   <a class="white-red fltrt" href="http://www.yukiyanai.com/" target="_top">日本語</a>
