--- a/classes/index.html
+++ b/classes/index.html
@@ -17,15 +17,15 @@
   <!-- InstanceBeginEditable name="header" -->
   <a class="white-red" href="http://yukiyanai.com/">home</a>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red" href="/~yyanai/cv/">cv</a>
+  <a class="white-red" href="/cv/">cv</a>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red" href="/~yyanai/publications/">publications</a>
+  <a class="white-red" href="/publications/">publications</a>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
   <!--<a class="white-red" href="/research/">research</a>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;-->
-  <a class="current" href="/~yyanai/classes">classes</a>
+  <a class="current" href="/classes">classes</a>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red" href="/~yyanai/resources/">resources</a>
+  <a class="white-red" href="/resources/">resources</a>
   <!-- InstanceEndEditable -->
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
   <a class="white-red fltrt" href="http://www.yukiyanai.com/">日本語</a>
@@ -37,22 +37,22 @@
   
   <h3>Current (Spring 2016)</h3>
   <ul>
-    <li><a href="/~yyanai/jp/classes/rm1/" target="_blank">Research Methods in Political Science I</a> (undergraduate and graduate) [taught in Japanese]</li>
-     <li><a href="/~yyanai/classes/rm3/" target="_blank">Research Methods in Political Science III</a> (undergraduate and graduate) [taught in English]</li>
+    <li><a href="/jp/classes/rm1/" target="_blank">Research Methods in Political Science I</a> (undergraduate and graduate) [taught in Japanese]</li>
+     <li><a href="/classes/rm3/" target="_blank">Research Methods in Political Science III</a> (undergraduate and graduate) [taught in English]</li>
   </ul>
   <h3>Past</h3>
   <ul>
-    <li><a href="/~yyanai/jp/classes/pe1/" target="_blank">Political
+    <li><a href="/jp/classes/pe1/" target="_blank">Political
     Economy I</a> (undergraduate and graduate), Kobe University (Fall 2015) </li>
     <li><a href="rm1/" target="_blank">Research Methods in Political
   Science I</a> (undergraduate and graduate), Kobe University (Fall 2015)</li>
-    <li><a href="/~yyanai/jp/classes/pe2/" target="_blank">Political
+    <li><a href="/jp/classes/pe2/" target="_blank">Political
   Economy II</a> (undergraduate and graduate), Kobe University (Spring
   2015)</li>
-    <li><a href="/~yyanai/jp/classes/rm2/" target="_blank">Research
+    <li><a href="/jp/classes/rm2/" target="_blank">Research
   Methods in Political Science II</a> (undergraduate and graduate),
   Kobe University (Spring 2015)</li>
-    <li><a href="/~yyanai/jp/classes/pp1/" target="_blank">Political
+    <li><a href="/jp/classes/pp1/" target="_blank">Political
   Process I</a> (udergraduate), Konan University (Spring 2015)</li>
     <li>Political Economy I (undergraduate and graduate), Kobe University (Fall 2014)</li>
     <li>Research Methods in Political Science I (undergraduate and graduate), Kobe University (Fall 2014)</li>
