--- a/cv/index.html
+++ b/cv/index.html
@@ -17,15 +17,15 @@
   <!-- InstanceBeginEditable name="header" -->
   <a class="white-red" href="http://yukiyanai.com/">home</a>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="current" href="/~yyanai/cv/">cv</a>
+  <a class="current" href="/cv/">cv</a>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red" href="/~yyanai/publications/">publications</a>
+  <a class="white-red" href="/publications/">publications</a>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
   <!--<a class="white-red" href="/research/">research</a>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;-->
-  <a class="white-red" href="/~yyanai/classes/">classes</a>
+  <a class="white-red" href="/classes/">classes</a>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red" href="/~yyanai/resources/">resources</a>
+  <a class="white-red" href="/resources/">resources</a>
   <!-- InstanceEndEditable -->
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
   <a class="white-red fltrt" href="http://www.yukiyanai.com/">日本語</a>
