--- a/publications/index.html
+++ b/publications/index.html
@@ -17,15 +17,15 @@
   <!-- InstanceBeginEditable name="header" -->
   <a class="white-red" href="http://yukiyanai.com/">home</a>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red" href="/~yyanai/cv/">cv</a>
+  <a class="white-red" href="/cv/">cv</a>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="current" href="/~yyanai/publications/">publications</a>
+  <a class="current" href="/publications/">publications</a>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
   <!--<a class="white-red" href="/research/">research</a>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;-->
-  <a class="white-red" href="/~yyanai/classes/">classes</a>
+  <a class="white-red" href="/classes/">classes</a>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red" href="/~yyanai/resources/">resources</a>
+  <a class="white-red" href="/resources/">resources</a>
   <!-- InstanceEndEditable -->
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
   <a class="white-red fltrt" href="http://www.yukiyanai.com/">日本語</a>
@@ -47,7 +47,7 @@
       
       <ul>
         <li><a class="booktitle" href="http://estore.ohmsha.co.jp/titles/978427406910P" target="_blank">Stata ni yoru Keiryoseijigaku</a> [<i>Quantitative Methods in Political Science Using Stata</i>] (with <a href="http://www.asanoucla.com/" target="_blank">Masahiko Asano</a>) (Feb. 2013: Ohmsha) 
-        <div class="exp"><a href="/~yyanai/jp/quant-methods-stata/" target="_blank">Book's Page</a> (in Japanese)</div>
+        <div class="exp"><a href="/jp/quant-methods-stata/" target="_blank">Book's Page</a> (in Japanese)</div>
         <div class="exp"> ISBN: 978-4-274-06910-9 [available at <a href="http://amazon.co.jp/dp/4274069109/" target="_blank">amazon.co.jp</a>. PDF edition can be purchased at <a href="http://estore.ohmsha.co.jp/titles/978427406910P" target="_blank">Ohmsha's website</a>]</div>
         </li> 
       </ul>
