--- a/classes/rm1/index.html
+++ b/classes/rm1/index.html
@@ -16,15 +16,15 @@
   <!-- InstanceBeginEditable name="header" -->
   <a class="white-red" href="http://yukiyanai.com/">home</a>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red" href="/~yyanai/cv/">cv</a>
+  <a class="white-red" href="/cv/">cv</a>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red" href="/~yyanai/publications/">publications</a>
+  <a class="white-red" href="/publications/">publications</a>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
   <!--<a class="white-red" href="/research/">research</a>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;-->
-  <a class="white-red" href="/~yyanai/classes">classes</a>
+  <a class="white-red" href="/classes">classes</a>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red" href="/~yyanai/resources/">resources</a>
+  <a class="white-red" href="/resources/">resources</a>
   <!-- InstanceEndEditable -->
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
   <a class="white-red fltrt" href="http://www.yukiyanai.com/">日本語</a>
@@ -79,7 +79,7 @@ More specifically, you will learn:
   Using Regression and Multilevel/Hierarchical Models.</i> New York:
   Cambridge UP.</li>
     <li></li>
-    <li>浅野正彦, 矢内勇生. 2013.『Stataによる計量政治学』オーム社 <a href="/~yyanai/jp/quant-methods-stata/">この本のページ</a></li>
+    <li>浅野正彦, 矢内勇生. 2013.『Stataによる計量政治学』オーム社 <a href="/jp/quant-methods-stata/">この本のページ</a></li>
     </ul>
     
  
