--- a/research/index.html
+++ b/research/index.html
@@ -15,20 +15,20 @@
   <h1>Yuki Yanai</h1>
   <p>
   <!-- InstanceBeginEditable name="header" -->
-  <a class="white-red" href="/~yyanai/">home</a>
+  <a class="white-red" href="/">home</a>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red" href="/~yyanai/cv/">cv</a>
+  <a class="white-red" href="/cv/">cv</a>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red" href="/~yyanai/publications/">publications</a>
+  <a class="white-red" href="/publications/">publications</a>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="current" href="/~yyanai/research/">research</a>
+  <a class="current" href="/research/">research</a>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red" href="/~yyanai/classes">classes</a>
+  <a class="white-red" href="/classes">classes</a>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red" href="/~yyanai/resources/">resources</a>
+  <a class="white-red" href="/resources/">resources</a>
   <!-- InstanceEndEditable -->
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red fltrt" href="/~yyanai/jp/">日本語</a>
+  <a class="white-red fltrt" href="/jp/">日本語</a>
   </p>
   <!-- end .header --></div>
   <!-- InstanceBeginEditable name="content" -->
