--- a/jp/classes/index.html
+++ b/jp/classes/index.html
@@ -17,17 +17,17 @@
   <!-- InstanceBeginEditable name="header" -->
   <a class="white-red" href="http://www.yukiyanai.com/">ホーム</a>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red" href="/~yyanai/jp/cv/">略歴</a>
+  <a class="white-red" href="/jp/cv/">略歴</a>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red" href="/~yyanai/jp/publications/">業績</a>
+  <a class="white-red" href="/jp/publications/">業績</a>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
   <!--<a class="white-red" href="/jp/research/">研究</a>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;-->
-  <a class="current" href="/~yyanai/jp/classes/">授業</a>
+  <a class="current" href="/jp/classes/">授業</a>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red" href="/~yyanai/jp/quant-methods-stata/">Stataによる計量政治学</a>
+  <a class="white-red" href="/jp/quant-methods-stata/">Stataによる計量政治学</a>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red" href="/~yyanai/jp/resources/">その他</a>
+  <a class="white-red" href="/jp/resources/">その他</a>
   <!-- InstanceEndEditable -->
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
   <a class="white-red fltrt" href="http://yukiyanai.com/">English</a>
@@ -40,7 +40,7 @@
   <h3>今学期（2016年度前期）の授業</h3>
   <ul>
     <li><a href="rm1">政治学方法論 I</a>（水曜5限）</li>
-    <li><a href="/~yyanai/classes/rm3/">政治学方法論 III</a>（水曜1限）[使用言語：英語]</li>
+    <li><a href="/classes/rm3/">政治学方法論 III</a>（水曜1限）[使用言語：英語]</li>
   </ul>
   
   <h3>過去の授業</h3>
