--- a/jp/classes/pp1/index.html
+++ b/jp/classes/pp1/index.html
@@ -17,17 +17,17 @@
   <!-- InstanceBeginEditable name="header" -->
   <a class="white-red" href="http://www.yukiyanai.com/">ホーム</a>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red" href="/~yyanai/jp/cv/">略歴</a>
+  <a class="white-red" href="/jp/cv/">略歴</a>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red" href="/~yyanai/jp/publications/">業績</a>
+  <a class="white-red" href="/jp/publications/">業績</a>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
   <!--<a class="white-red" href="/jp/research/">研究</a>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;-->
-  <a class="white-red" href="/~yyanai/jp/classes/">授業</a>
+  <a class="white-red" href="/jp/classes/">授業</a>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red" href="/~yyanai/jp/quant-methods-stata/">Stataによる計量政治学</a>
+  <a class="white-red" href="/jp/quant-methods-stata/">Stataによる計量政治学</a>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red" href="/~yyanai/jp/resources/">その他</a>
+  <a class="white-red" href="/jp/resources/">その他</a>
   <!-- InstanceEndEditable -->
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
   <a class="white-red fltrt" href="http://yukiyanai.com/">English</a>
@@ -75,7 +75,7 @@
   
   <h4>主な参考書</h4>
     <ul>
-      <li>浅野正彦, 矢内勇生. 2013.『<a href="http://www2.kobe-u.ac.jp/~yyanai/jp/quant-methods-stata/", target="_blank">Stataによる計量政治学</a>』オーム社.</li>      
+      <li>浅野正彦, 矢内勇生. 2013.『<a href="http://www2.kobe-u.ac.jp/jp/quant-methods-stata/", target="_blank">Stataによる計量政治学</a>』オーム社.</li>      
       <li>川人貞史, 吉野孝, 平野浩, 加藤淳子. 2011.『現代の政党と選挙 新版』有斐閣.</li>
       <li>久米郁男, 川出良枝, 古城佳子, 田中愛治, 真渕勝. 2011.『政治学 補訂版』有斐閣.</li>
       <li>平野浩, 河野勝（編）. 2011.『新版 アクセス日本政治論』日本経済評論社.</li>
