--- a/jp/index.html
+++ b/jp/index.html
@@ -17,17 +17,17 @@
   <!-- InstanceBeginEditable name="header" -->
   <a class="current" href="http://www.yukiyanai.com/">ホーム</a>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red" href="/~yyanai/jp/cv/" target="_top">略歴</a>
+  <a class="white-red" href="/jp/cv/" target="_top">略歴</a>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red" href="/~yyanai/jp/publications/" target="_top">業績</a>
+  <a class="white-red" href="/jp/publications/" target="_top">業績</a>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
   <!--<a class="white-red" href="/jp/research/">研究</a>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;-->
-  <a class="white-red" href="/~yyanai/jp/classes/" target="_top">授業</a>
+  <a class="white-red" href="/jp/classes/" target="_top">授業</a>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red" href="/~yyanai/jp/quant-methods-stata/" target="_top">Stataによる計量政治学</a>
+  <a class="white-red" href="/jp/quant-methods-stata/" target="_top">Stataによる計量政治学</a>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red" href="/~yyanai/jp/resources/" target="_top">その他</a>
+  <a class="white-red" href="/jp/resources/" target="_top">その他</a>
   <!-- InstanceEndEditable -->
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
   <a class="white-red fltrt" href="http://yukiyanai.com/" target="_top">English</a>
