--- a/jp/publications/index.html
+++ b/jp/publications/index.html
@@ -17,17 +17,17 @@
   <!-- InstanceBeginEditable name="header" -->
   <a class="white-red" href="http://www.yukiyanai.com/">ホーム</a>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red" href="/~yyanai/jp/cv/">略歴</a>
+  <a class="white-red" href="/jp/cv/">略歴</a>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="current" href="/~yyanai/jp/publications/">業績</a>
+  <a class="current" href="/jp/publications/">業績</a>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
   <!--<a class="white-red" href="/jp/research/">研究</a>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;-->
-  <a class="white-red" href="/~yyanai/jp/classes/">授業</a>
+  <a class="white-red" href="/jp/classes/">授業</a>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red" href="/~yyanai/jp/quant-methods-stata/">Stataによる計量政治学</a>
+  <a class="white-red" href="/jp/quant-methods-stata/">Stataによる計量政治学</a>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red" href="/~yyanai/jp/resources/">その他</a>
+  <a class="white-red" href="/jp/resources/">その他</a>
   <!-- InstanceEndEditable -->
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
   <a class="white-red fltrt" href="http://yukiyanai.com/">English</a>
@@ -47,9 +47,9 @@
   
   <h3>著書</h3>
   <ul>
-    <li>『<a href="/~yyanai/jp/quant-methods-stata/">Stataによる 計量政治学</a>』  (<a href="http://www.asanoucla.com/" target="_blank">浅野正彦</a> 氏と共著) (2013年2月, オーム社) 
+    <li>『<a href="/jp/quant-methods-stata/">Stataによる 計量政治学</a>』  (<a href="http://www.asanoucla.com/" target="_blank">浅野正彦</a> 氏と共著) (2013年2月, オーム社) 
     <div class="exp"> ISBN: 978-4-274-06910-9&nbsp;&nbsp; 単行本・Kindle版は <a href="http://amazon.co.jp/dp/4274069109/" target="_blank">amazon.co.jp</a>で、 PDF版は<a href="http://estore.ohmsha.co.jp/titles/978427406910P" target="_blank">オーム社のウェブサイト</a>で購入できます.</div><br>
-     <div class="exp">本書の分析に使ったデータセットとStataのコード, Rで分析するための方法は<a href="/~yyanai/jp/quant-methods-stata/">本書のページ</a>で。</div></li> 
+     <div class="exp">本書の分析に使ったデータセットとStataのコード, Rで分析するための方法は<a href="/jp/quant-methods-stata/">本書のページ</a>で。</div></li> 
   </ul>
   
   <h3>分担執筆</h3>
