--- a/jp/classes/rm1/contents/rm1-assignment06.html
+++ b/jp/classes/rm1/contents/rm1-assignment06.html
@@ -17,17 +17,17 @@
   <!-- InstanceBeginEditable name="header" -->
   <a class="white-red" href="http://www.yukiyanai.com/">ホーム</a>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red" href="/~yyanai/jp/cv/">略歴</a>
+  <a class="white-red" href="/jp/cv/">略歴</a>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red" href="/~yyanai/jp/publications/">業績</a>
+  <a class="white-red" href="/jp/publications/">業績</a>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red" href="/~yyanai/jp/research/">研究</a>
+  <a class="white-red" href="/jp/research/">研究</a>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red" href="/~yyanai/jp/classes/">授業</a>
+  <a class="white-red" href="/jp/classes/">授業</a>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red" href="/~yyanai/jp/quant-methods-stata/">Stataによる計量政治学</a>
+  <a class="white-red" href="/jp/quant-methods-stata/">Stataによる計量政治学</a>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red" href="/~yyanai/jp/resources/">その他</a>
+  <a class="white-red" href="/jp/resources/">その他</a>
   <!-- InstanceEndEditable -->
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
   <a class="white-red fltrt" href="http://yukiyanai.com/">English</a>
