--- a/jp/classes/rm1/index.html
+++ b/jp/classes/rm1/index.html
@@ -17,17 +17,17 @@
   <!-- InstanceBeginEditable name="header" -->
   <a class="white-red" href="http://www.yukiyanai.com/">ホーム</a>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red" href="/~yyanai/jp/cv/">略歴</a>
+  <a class="white-red" href="/jp/cv/">略歴</a>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red" href="/~yyanai/jp/publications/">業績</a>
+  <a class="white-red" href="/jp/publications/">業績</a>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
   <!--<a class="white-red" href="/jp/research/">研究</a>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;-->
-  <a class="white-red" href="/~yyanai/jp/classes/">授業</a>
+  <a class="white-red" href="/jp/classes/">授業</a>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red" href="/~yyanai/jp/quant-methods-stata/">Stataによる計量政治学</a>
+  <a class="white-red" href="/jp/quant-methods-stata/">Stataによる計量政治学</a>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red" href="/~yyanai/jp/resources/">その他</a>
+  <a class="white-red" href="/jp/resources/">その他</a>
   <!-- InstanceEndEditable -->
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
   <a class="white-red fltrt" href="http://yukiyanai.com/">English</a>
@@ -56,7 +56,7 @@
   <h4>教科書</h4>
   
   <ul>
-    <li>浅野正彦, 矢内勇生. 2013.『Stataによる計量政治学』オーム社. <a href="/~yyanai/jp/quant-methods-stata/">この本のページ</a></li>
+    <li>浅野正彦, 矢内勇生. 2013.『Stataによる計量政治学』オーム社. <a href="/jp/quant-methods-stata/">この本のページ</a></li>
   </ul>
   
 
