--- a/index.html
+++ b/index.html
@@ -34,8 +34,11 @@
   <!-- InstanceBeginEditable name="content" -->
   <div class="content">
       <h2>Welcome to YUKI YANAI's Website</h2>
-      <p>I am an assistant professor of Comparative Politics in the Graduate School of Law at Kobe University and a Ph.D. candidate in the Department of Political Science at UCLA . My research interests lie primarily in the areas of comparative political economy and comparative political institutions. My current research investigates the relationships between political behavior and economic inequality in advanced industrial nations.  Another research focus is to analyze the effects of bicameralism on lawmaking in parliamentary democrarcies.</p>
-      
+      <p>
+      I am an assistant professor in the Graduate School of International Relations at the International University of Japan and a Ph.D. candidate in the Department of Political Science at UCLA . My research interests lie primarily in the areas of comparative political economy and comparative political institutions. My current research investigates the relationships between political behavior and economic inequality in advanced industrial nations.  Another research focus is to analyze the effects of bicameralism on lawmaking in parliamentary democrarcies.
+      </p>
+      <!-- <p>I am an assistant professor of Comparative Politics in the Graduate School of Law at Kobe University and a Ph.D. candidate in the Department of Political Science at UCLA . My research interests lie primarily in the areas of comparative political economy and comparative political institutions. My current research investigates the relationships between political behavior and economic inequality in advanced industrial nations.  Another research focus is to analyze the effects of bicameralism on lawmaking in parliamentary democrarcies.</p>
+      -->
    <p>
    </p>
       
@@ -45,13 +48,13 @@
   <div class="footer">
   <table width="100%">
     <tr>
-      <td align="left">&nbsp;&nbsp;<a class="white-white" href="http://www.law.kobe-u.ac.jp/kobe_univ_global/english.html" target="_blank">Graduate School of Law</a>, <a class="white-white" href="http://www.kobe-u.ac.jp/en/" target="_blank">Kobe University</a></td>
+      <td align="left">&nbsp;&nbsp;<a class="white-white" href="http://www.iuj.ac.jp/gsir/" target="_blank">Graduate School of International Relations</a>, <a class="white-white" href="http://www.iuj.ac.jp/" target="_blank">International Unversity of Japan</a></td>
     </tr>
     <tr>
-      <td align="left">&nbsp;&nbsp;2-1 Rokkodai-cho, Nada-ku, Kobe, Hyogo 657-8501, JAPAN</td>
+      <td align="left">&nbsp;&nbsp;777 Kokusai-cho, Minami-Uonuma, Niigata 949-7248, JAPAN</td>
     </tr>
     <tr>
-      <td align="left">&nbsp;&nbsp;Email: yanai [at] lion.kobe-u.ac.jp</td>
+      <td align="left">&nbsp;&nbsp;Email: yanai [at] iuj.ac.jp</td>
       <td align="right"> &copy; 2014-2016 Yuki Yanai&nbsp;&nbsp;</td>
     </tr>
   </table>
