--- a/jp/classes/pe1/contents/index.html
+++ b/jp/classes/pe1/contents/index.html
@@ -74,16 +74,16 @@
   <div class="footer">
   <table width="100%">
     <tr>
-      <td align="left">&nbsp;&nbsp;&#12306;657-8501 神戸市灘区六甲台町2−1</td>
+      <td align="left">&nbsp;&nbsp;&#12306;949-7248 新潟県南魚沼市国際町777</td>
       <td></td>
     </tr>
     <tr>
-      <td align="left">&nbsp;&nbsp;<a class="white-white" href="http://www.kobe-u.ac.jp/" target="_blank">神戸大学</a>大学院<a class="white-white" href="http://www.law.kobe-u.ac.jp/" target="_blank">法学研究科</a></td>
+      <td align="left">&nbsp;&nbsp;<a class="white-white" href="http://iuj.ac.jp/jp/" target="_blank">国際大学</a> <a class="white-white" href="http://iuj.ac.jp/jp/graduate/gsir/" target="_blank">国際関係学研究科</a></td>
       <td></td>
     </tr>
     <tr>
-      <td align="left">&nbsp;&nbsp;Email: yanai [at] lion.kobe-u.ac.jp</td>
-      <td align="right"> &copy; 2014-2015 Yuki Yanai&nbsp;&nbsp;</td>
+      <td align="left">&nbsp;&nbsp;Email: yanai [at] iuj.ac.jp</td>
+      <td align="right"> &copy; 2014-2016 Yuki Yanai&nbsp;&nbsp;</td>
     </tr>
     </table>
   <!-- end .footer --> </div>
