--- a/classes/index.html
+++ b/classes/index.html
@@ -35,13 +35,20 @@
   <div class="content">
   <h2>Classes</h2>
   
-  <h3>Current (Spring 2016)</h3>
+  <h3>Current (Fall 2016)</h3>
+  <h4>IUJ</h4>
   <ul>
-    <li><a href="/jp/classes/rm1/" target="_blank">Research Methods in Political Science I</a> (undergraduate and graduate) [taught in Japanese]</li>
-     <li><a href="/classes/rm3/" target="_blank">Research Methods in Political Science III</a> (undergraduate and graduate) [taught in English]</li>
+    <li><a href="" target="_blank">Positive Political Theory</a></li>
+  </ul>
+  <h4>Kobe University</h4>
+  <ul>
+    <li><a href="" target="_blank">Political Economy</a> (undergraduate and graduate) [taught in Japanese]</li>
+     <li><a href="" target="_blank">Research Methods in Political Science II</a> (undergraduate and graduate) [taught in English]</li>
   </ul>
   <h3>Past</h3>
   <ul>
+    <li><a href="/jp/classes/rm1/" target="_blank">Research Methods in Political Science I</a> (undergraduate and graduate) [taught in Japanese]</li>
+     <li><a href="/classes/rm3/" target="_blank">Research Methods in Political Science III</a> (undergraduate and graduate) [taught in English]</li>
     <li><a href="/jp/classes/pe1/" target="_blank">Political
     Economy I</a> (undergraduate and graduate), Kobe University (Fall 2015) </li>
     <li><a href="rm1/" target="_blank">Research Methods in Political
@@ -65,20 +72,21 @@
   <!-- end .content -->
   </div>
   <!-- InstanceEndEditable -->
-  <div class="footer">
+  <<div class="footer">
   <table width="100%">
     <tr>
-      <td align="left">&nbsp;&nbsp;<a class="white-white" href="http://www.law.kobe-u.ac.jp/kobe_univ_global/english.html" target="_blank">Graduate School of Law</a>, <a class="white-white" href="http://www.kobe-u.ac.jp/en/" target="_blank">Kobe University</a></td>
+      <td align="left">&nbsp;&nbsp;<a class="white-white" href="http://www.iuj.ac.jp/gsir/" target="_blank">Graduate School of International Relations</a>, <a class="white-white" href="http://www.iuj.ac.jp/" target="_blank">International Unversity of Japan</a></td>
     </tr>
     <tr>
-      <td align="left">&nbsp;&nbsp;2-1 Rokkodai-cho, Nada-ku, Kobe, Hyogo 657-8501, JAPAN</td>
+      <td align="left">&nbsp;&nbsp;777 Kokusai-cho, Minami-Uonuma, Niigata 949-7248, JAPAN</td>
     </tr>
     <tr>
-      <td align="left">&nbsp;&nbsp;Email: yanai [at] lion.kobe-u.ac.jp</td>
+      <td align="left">&nbsp;&nbsp;Email: yanai [at] iuj.ac.jp</td>
       <td align="right"> &copy; 2014-2016 Yuki Yanai&nbsp;&nbsp;</td>
     </tr>
   </table>
   <!-- end .footer --></div>
+
 <!-- end .container --></div>
 </body>
 <!-- InstanceEnd --></html>
