--- a/cv/index.html
+++ b/cv/index.html
@@ -41,11 +41,12 @@
  
   <h3>Current Position</h3>
   <ul>
-    <li>Assistant Professor, Graduate School of Law, Kobe University (July 2014 - present)</li>
-    </ul>
+    <li>Assistant Professor, Graduate School of International Relations, International University of Japan (Sep 2016 - present)</li>  
+  </ul>
  
   <h3>Previous Positions</h3>
   <ul>
+    <li>Assistant Professor, Graduate School of Law, Kobe University (July 2014 - Aug 2016)</li>
     <li>Adjunct Lecturer, School of Political Science and Economics, Waseda University (Apr 2014 - Sep 2014)</li>
     <li>Adjunct Researcher, Faculty of Political Science and Economics, Waseda University (Apr 2013 - June 2014)</li>
     <li> Lecturer (adjunct), School of Political Science and Economics, Takushoku University (Apr 2012 - Sep 2014)</li>
@@ -74,13 +75,13 @@
   <div class="footer">
   <table width="100%">
     <tr>
-      <td align="left">&nbsp;&nbsp;<a class="white-white" href="http://www.law.kobe-u.ac.jp/kobe_univ_global/english.html" target="_blank">Graduate School of Law</a>, <a class="white-white" href="http://www.kobe-u.ac.jp/en/" target="_blank">Kobe University</a></td>
+      <td align="left">&nbsp;&nbsp;<a class="white-white" href="http://www.iuj.ac.jp/gsir/" target="_blank">Graduate School of International Relations</a>, <a class="white-white" href="http://www.iuj.ac.jp/" target="_blank">International Unversity of Japan</a></td>
     </tr>
     <tr>
-      <td align="left">&nbsp;&nbsp;2-1 Rokkodai-cho, Nada-ku, Kobe, Hyogo 657-8501, JAPAN</td>
+      <td align="left">&nbsp;&nbsp;777 Kokusai-cho, Minami-Uonuma, Niigata 949-7248, JAPAN</td>
     </tr>
     <tr>
-      <td align="left">&nbsp;&nbsp;Email: yanai [at] lion.kobe-u.ac.jp</td>
+      <td align="left">&nbsp;&nbsp;Email: yanai [at] iuj.ac.jp</td>
       <td align="right"> &copy; 2014-2016 Yuki Yanai&nbsp;&nbsp;</td>
     </tr>
   </table>
