--- a/jp/classes/index.html
+++ b/jp/classes/index.html
@@ -37,14 +37,21 @@
   <div class="content">
       <h2>授業</h2>
   
-  <h3>今学期（2016年度前期）の授業</h3>
+  <h3>今学期（2016年度秋学期）の授業</h3>
+  <h4>国際大学</h4>
   <ul>
-    <li><a href="rm1">政治学方法論 I</a>（水曜5限）</li>
-    <li><a href="/classes/rm3/">政治学方法論 III</a>（水曜1限）[使用言語：英語]</li>
+    <li><a href="">Positive Political Theory</a></li>
+  </ul>
+  <h4>神戸大学</h4>
+  <ul>
+    <li><a href="">政治経済学</a></li>
+    <li><a href="">政治学方法論 II</a> [使用言語：英語]</li>
   </ul>
   
   <h3>過去の授業</h3>
   <ul>
+    <li><a href="rm1">政治学方法論 I</a></li>
+    <li><a href="/classes/rm3/">政治学方法論 III</a> [使用言語：英語]</li>
     <li><a href="pe1">政治経済学 I</a> [2014年度後期, 2015年後期, 神戸大学 法学部 / 法学研究科] </li>
     <li><a href="pe2/">政治経済学 II</a> [2015年度前期, 神戸大学 法学部 / 法学研究科] </li>
     <li>政治学方法論 I</a> [2014年度後期, 2015年度後期, 神戸大学 法学部 / 法学研究科] </li>
@@ -62,15 +69,15 @@
   <div class="footer">
   <table width="100%">
     <tr>
-      <td align="left">&nbsp;&nbsp;&#12306;657-8501 神戸市灘区六甲台町2−1</td>
+      <td align="left">&nbsp;&nbsp;&#12306;949-7248 新潟県南魚沼市国際町777</td>
       <td></td>
     </tr>
     <tr>
-      <td align="left">&nbsp;&nbsp;<a class="white-white" href="http://www.kobe-u.ac.jp/" target="_blank">神戸大学</a>大学院<a class="white-white" href="http://www.law.kobe-u.ac.jp/" target="_blank">法学研究科</a></td>
+      <td align="left">&nbsp;&nbsp;<a class="white-white" href="http://iuj.ac.jp/jp/" target="_blank">国際大学</a> <a class="white-white" href="http://iuj.ac.jp/jp/graduate/gsir/" target="_blank">国際関係学研究科</a></td>
       <td></td>
     </tr>
     <tr>
-      <td align="left">&nbsp;&nbsp;Email: yanai [at] lion.kobe-u.ac.jp</td>
+      <td align="left">&nbsp;&nbsp;Email: yanai [at] iuj.ac.jp</td>
       <td align="right"> &copy; 2014-2016 Yuki Yanai&nbsp;&nbsp;</td>
     </tr>
     </table>
