--- a/jp/cv/index.html
+++ b/jp/cv/index.html
@@ -77,14 +77,21 @@
       <td align="left">2010年 4月</td>
       <td align="left">早稲田大学教育・総合科学学術院</td>
       <td align="left">助手</td>
-    </tr><tr>
+    </tr>
+    <tr>
       <td align="left">2013年 4月</td>
       <td align="left">早稲田大学政治経済学術院</td>
       <td align="left">招聘研究員</td>
-    </tr><tr>
+    </tr>
+    <tr>
       <td align="left">2014年 7月</td>
       <td align="left">神戸大学大学院法学研究科</td>
       <td align="left">特命講師</td>
+    </tr>
+    <tr>
+      <td align="left">2016年 9月</td>
+      <td align="left">国際大学大学院国際関係学研究科</td>
+      <td align="left">講師</td>
     </tr>
     <tr>
       <td align="left"></td>
@@ -98,15 +105,15 @@
   <div class="footer">
   <table width="100%">
     <tr>
-      <td align="left">&nbsp;&nbsp;&#12306;657-8501 神戸市灘区六甲台町2−1</td>
+      <td align="left">&nbsp;&nbsp;&#12306;949-7248 新潟県南魚沼市国際町777</td>
       <td></td>
     </tr>
     <tr>
-      <td align="left">&nbsp;&nbsp;<a class="white-white" href="http://www.kobe-u.ac.jp/" target="_blank">神戸大学</a>大学院<a class="white-white" href="http://www.law.kobe-u.ac.jp/" target="_blank">法学研究科</a></td>
+      <td align="left">&nbsp;&nbsp;<a class="white-white" href="http://iuj.ac.jp/jp/" target="_blank">国際大学</a> <a class="white-white" href="http://iuj.ac.jp/jp/graduate/gsir/" target="_blank">国際関係学研究科</a></td>
       <td></td>
     </tr>
     <tr>
-      <td align="left">&nbsp;&nbsp;Email: yanai [at] lion.kobe-u.ac.jp</td>
+      <td align="left">&nbsp;&nbsp;Email: yanai [at] iuj.ac.jp</td>
       <td align="right"> &copy; 2014-2016 Yuki Yanai&nbsp;&nbsp;</td>
     </tr>
     </table>
