update courses for fall 2016

--- a/classes/index.html
+++ b/classes/index.html
@@ -42,7 +42,7 @@
   </ul>
   <h4>Kobe University</h4>
   <ul>
-    <li><a href="" target="_blank">Political Economy</a> (undergraduate and graduate) [taught in Japanese]</li>
+    <li><a href="/jp/classes/pe/" target="_blank">Basics of Political Economy</a> (undergraduate and graduate) [taught in Japanese]</li>
      <li><a href="" target="_blank">Research Methods in Political Science II</a> (undergraduate and graduate) [taught in English]</li>
   </ul>
   <h3>Past</h3>
