--- a/jp/classes/index.html
+++ b/jp/classes/index.html
@@ -38,13 +38,13 @@
       <h2>授業</h2>
   
   <h3>今学期（2016年度秋学期）の授業</h3>
-  <h4>国際大学</h4>
+  <h4>国際大学 (IUJ)</h4>
   <ul>
-    <li><a href="">Positive Political Theory</a></li>
+    <li><a href="/classes/ppt/">Positive Political Theory</a></li>
   </ul>
   <h4>神戸大学</h4>
   <ul>
-    <li><a href="">政治経済学</a></li>
+    <li><a href="pe/">政治経済学</a></li>
     <li><a href="">政治学方法論 II</a> [使用言語：英語]</li>
   </ul>
   
