--- a/resources/index.html
+++ b/resources/index.html
@@ -35,12 +35,19 @@
   <div class="content">
    <h2>Resources</h2>
    
-   <h3>Beamer theme for Kobe University</h3>
+   <h3>Beamer themes</h3>
+   
+   <h4>International University of Japan</h4>
+   <ul>
+     <li><a href="https://github.com/yukiyanai/IUJ-Beamer" target="_blank">IUJ-Beamer</a> (GitHub)</li>
+   </ul>
+   
+   <h4>Kobe University</h4>
    <ul>
      <li><a href="https://github.com/yukiyanai/KobeBeamer" target="_blank">KobeBeamer</a> (GitHub)</li>
    </ul>
   
-   <h3>Beamer color theme for Bruins and UCLA-related scholars</h3>
+   <h4>Beamer color theme for Bruins and UCLA-related scholars</h4>
    <ul>
      <li><a href="docs/beamercolorthemebruin.sty" target="_blank">beamercolorthemebruin.sty</a></li>
    </ul> 
