--- a/classes/index.html
+++ b/classes/index.html
@@ -38,7 +38,7 @@
   <h3>Current (Fall 2016)</h3>
   <h4>IUJ</h4>
   <ul>
-    <li><a href="" target="_blank">Positive Political Theory</a></li>
+    <li><a href="ppt/" target="_blank">Positive Political Theory</a></li>
   </ul>
   <h4>Kobe University</h4>
   <ul>
