revise ppt syllabus

--- a/classes/ppt/index.html
+++ b/classes/ppt/index.html
@@ -40,7 +40,7 @@
   <br>
 
   <h4><a class="black"
-     href="docs/syllabus-ppt-2016fall.pdf">Syllabus</a></h4>
+     href="docs/syllabus-ppt-2016fall.pdf">Syllabus (revised on Oct. 5, 2016)</a></h4>
      <br>
   
   <h3>Overview and Class Goals</h3>
