update pe syllabus

--- a/jp/classes/pe/index.html
+++ b/jp/classes/pe/index.html
@@ -39,7 +39,7 @@
   
     <p>2016年度後期 神戸大学法学部・法学研究科</p>
     
-   <h4><a class="black" href="docs/syllabus-pe-2016fall.pdf">シラバス</a>（2016年10月4日版）</h4>
+   <h4><a class="black" href="docs/syllabus-pe-2016fall.pdf">シラバス</a>（改訂：2016年10月5日）</h4>
      <br> 
   
   <h3>授業の目的と到達目標</h3>
