upload the syllabus of rmps2

--- a/classes/rm2-2016/contents/index.html
+++ b/classes/rm2-2016/contents/index.html
@@ -3,9 +3,9 @@
 <head>
 <meta charset="UTF-8">
 <!-- InstanceBeginEditable name="doctitle" -->
-<title>Research Methods III - Yuki Yanai</title>
+<title>Research Methods II - Yuki Yanai</title>
 <!-- InstanceEndEditable -->
-<link href="../../css/yy_style.css" rel="stylesheet" type="text/css">
+<link href="../../../css/yy_style.css" rel="stylesheet" type="text/css">
 <link rel="shortcut icon" href="../images/favicon.ico">
 </head>
 <body>
@@ -34,31 +34,19 @@
 
  <div class="content">
 
-  <h2>Research Methods in Political Science III（政治学方法論 III）</h2>
-  
-    <p>School of Law and Graduate School of Law, Kobe University, Spring
-    2016</p>
-  <br>
+<h2>Research Methods in Political Science II（政治学方法論 II）</h2>
+  <p>School of Law and Graduate School of Law, Kobe University, Fall 2016</p>
+  <p><a href="../">Class Overview</a></p>
 
-  <h4><a class="black"
-     href="docs/syllabus-rm3-2016spring.pdf">Syllabus</a></h4>
-     <br>
-  
-  <h3>Overview and Class Goals</h3>
-  <p> This course introduces students to causal inference based on the potential outcome approach. The students will learn some statistical methods to find out causal effects in political phenomena so that they will be able to make causal claims in their own research.</p>
-  
-  <!-- <h3><a href="contents/">Class Materials</a></h3> 
-      <br>
-  -->
+<br>
 
-   <h4>Required Book</h4>
-  
-  <ul>
-    <li>Angris, Joshua D., and J&oumlrn-Steffen Pischke. 2014. <i>Mastering 'Metrics: The Path from Cause to Effect.</i> Princeton: Princeton UP.</li>
-  </ul>
-    
- 
-      <!-- end .content -->
+<h2>Class Materials</h2>
+
+  <h3>To be uploaded.</h3>
+   <ul>
+   </ul>  
+
+  <!-- end .content -->
   </div>
   <!-- InstanceEndEditable -->
   <div class="footer">
