--- a/classes/index.html
+++ b/classes/index.html
@@ -43,7 +43,7 @@
   <h4>Kobe University</h4>
   <ul>
     <li><a href="/jp/classes/pe/" target="_blank">Basics of Political Economy</a> (undergraduate and graduate) [taught in Japanese]</li>
-     <li><a href="" target="_blank">Research Methods in Political Science II</a> (undergraduate and graduate) [taught in English]</li>
+     <li><a href="rm2-2016/" target="_blank">Research Methods in Political Science II</a> (undergraduate and graduate) [taught in English]</li>
   </ul>
   <h3>Past</h3>
   <ul>
