--- a/jp/classes/index.html
+++ b/jp/classes/index.html
@@ -45,7 +45,7 @@
   <h4>神戸大学</h4>
   <ul>
     <li><a href="pe/">政治経済学</a></li>
-    <li><a href="/classes/rm2-2016/s">政治学方法論 II</a> [使用言語：英語]</li>
+    <li><a href="/classes/rm2-2016/">政治学方法論 II</a> [使用言語：英語]</li>
   </ul>
   
   <h3>過去の授業</h3>
