rm2 materials for day 1

--- a/classes/rm2-2016/contents/index.html
+++ b/classes/rm2-2016/contents/index.html
@@ -42,8 +42,11 @@
 
 <h2>Class Materials</h2>
 
-  <h3>To be uploaded.</h3>
+  <h3>Day 1</h3>
    <ul>
+     <li> <a href="R/rm2-linear-regression.html" target="_blank">Linear Regression: A Review</a></li>
+     <!-- <li> <a href="R/rm2-overfitting.html" target="_blank">Overfitting and Information Criteria</a></li>  -->
+     <li> <a href="R/rm2-interaction.html" target="_blank">Interaction: Conditional Effects</a></li>
    </ul>  
 
   <!-- end .content -->
