--- a/classes/rm2-2016/contents/index.html
+++ b/classes/rm2-2016/contents/index.html
@@ -52,7 +52,7 @@
    <h3>Day 2</h3>
    <ul>
      <li> <a href="R/rm2-MCMC.html" target="_blank">Markov Chain Monte Carlo</a></li>
-     <li> <a href="R/rm2-intro2stan.html" target="_blank">Introduction to RStan</a></li>
+     <li> <a href="R/rm2-intro2Stan.html" target="_blank">Introduction to RStan</a></li>
      <li> <a href="R/rm2-intro2GLM.html" target="_blank">Introduction to GLM: Logit Model (Logistic Regression)</a></li>
    </ul>
 
