--- a/classes/rm2-2016/contents/R/rm2-intro2GLM.html
+++ b/classes/rm2-2016/contents/R/rm2-intro2GLM.html
@@ -146,7 +146,7 @@ $(document).ready(function () {
 
 
 <h1 class="title toc-ignore">Research Methods in Political Science II</h1>
-<h3 class="subtitle"><em>Day 2-3: Introduction to GLM (Logit and Probit)</em></h3>
+<h3 class="subtitle"><em>Day 2-3: Introduction to GLM (Logit Model)</em></h3>
 <h4 class="author"><em>Yuki Yanai</em></h4>
 <h4 class="date"><em>November 5, 2016</em></h4>
 
