upload materials for rmps2

--- a/classes/rm2-2016/contents/index.html
+++ b/classes/rm2-2016/contents/index.html
@@ -44,17 +44,23 @@
 
   <h3>Day 1</h3>
    <ul>
-     <li> <a href="R/rm2-linear-regression.html" target="_blank">Linear Regression: A Review</a></li>
+     <li><a href="R/rm2-linear-regression.html" target="_blank">Linear Regression: A Review</a></li>
      <!-- <li> <a href="R/rm2-overfitting.html" target="_blank">Overfitting and Information Criteria</a></li>  -->
-     <li> <a href="R/rm2-interaction.html" target="_blank">Interaction: Conditional Effects</a></li>
+     <li><a href="R/rm2-interaction.html" target="_blank">Interaction: Conditional Effects</a></li>
    </ul>  
    
    <h3>Day 2</h3>
    <ul>
-     <li> <a href="R/rm2-MCMC.html" target="_blank">Markov Chain Monte Carlo</a></li>
-     <li> <a href="R/rm2-intro2Stan.html" target="_blank">Introduction to RStan</a></li>
-     <li> <a href="R/rm2-intro2GLM.html" target="_blank">Introduction to GLM: Logit Model (Logistic Regression)</a></li>
+     <li><a href="R/rm2-MCMC.html" target="_blank">Markov Chain Monte Carlo</a></li>
+     <li><a href="R/rm2-intro2Stan.html" target="_blank">Introduction to RStan</a></li>
    </ul>
+   
+   <h3>Day 3</h3>
+   <ul>
+     <li><a href="R/rm2-intro2GLM.html" target="_blank">Introduction to GLM: Logit Model (Logistic Regression)</a></li>
+     <li><a href="R/rm2-day3ex.html" target="_blank">Exercises</a></li>
+   </ul>
+
 
   <!-- end .content -->
   </div>
