--- a/jp/resources/index.html
+++ b/jp/resources/index.html
@@ -64,7 +64,7 @@
     <h4>比例区</h4>
     <ul>
       <li>政党 CSVファイル（文字コードはUTF-8）：<a href="data/hc2016-pr-parties.csv">hc2016-pr-parties.csv</a></li>
-      <li>候補者 CSVファイル（文字コードはUTF-8）：<a href="data/hc2016-pr-candidate.csv">hc2016-pr-candidate.csv</a></i>
+      <li>候補者 CSVファイル（文字コードはUTF-8）：<a href="data/hc2016-pr-candidates.csv">hc2016-pr-candidates.csv</a></i>
     </ul>
     <h5>ソース</h5>
     <ul>
