upload course materials for rmps2

--- a/classes/rm2-2016/contents/index.html
+++ b/classes/rm2-2016/contents/index.html
@@ -60,6 +60,11 @@
      <li><a href="R/rm2-intro2GLM.html" target="_blank">Introduction to GLM: Logit Model (Logistic Regression)</a></li>
      <li><a href="R/rm2-day3ex.html" target="_blank">Exercises</a></li>
    </ul>
+   
+   <h3>Day 4</h3>
+   <ul>
+     <li><a href="R/rm2-Poisson.html" target="_blank">Analysis of Count Outcome: Poisson Model</a></li>
+   </ul>
 
 
   <!-- end .content -->
