upload course materials for rmps2

--- a/classes/rm2-2016/contents/index.html
+++ b/classes/rm2-2016/contents/index.html
@@ -64,6 +64,7 @@
    <h3>Day 5</h3>
    <ul>
      <li><a href="R/rm2-Poisson.html" target="_blank">Analysis of Count Outcome: Poisson Model</a></li>
+     <li><a href="R/rm2-Count.html" target="_blank">Some Other Count Models: Negative-Binomial Model and ZIP Model</a></li>
    </ul>
 
 
