Update copyright to 2017

--- a/classes/index.html
+++ b/classes/index.html
@@ -35,10 +35,10 @@
   <div class="content">
   <h2>Classes</h2>
   
-  <h3>Current (Fall 2016)</h3>
+  <h3>Current (Winter 2017)</h3>
   <h4>IUJ</h4>
   <ul>
-    <li><a href="ppt/" target="_blank">Positive Political Theory</a></li>
+    <li><a href="pubadmin/" target="_blank">Public Administration</a></li>
   </ul>
   <h4>Kobe University</h4>
   <ul>
@@ -82,7 +82,7 @@
     </tr>
     <tr>
       <td align="left">&nbsp;&nbsp;Email: yanai [at] iuj.ac.jp</td>
-      <td align="right"> &copy; 2014-2016 Yuki Yanai&nbsp;&nbsp;</td>
+      <td align="right"> &copy; 2014-2017 Yuki Yanai&nbsp;&nbsp;</td>
     </tr>
   </table>
   <!-- end .footer --></div>
