--- a/jp/classes/index.html
+++ b/jp/classes/index.html
@@ -37,10 +37,10 @@
   <div class="content">
       <h2>授業</h2>
   
-  <h3>今学期（2016年度秋学期）の授業</h3>
+  <h3>今学期（2016年度後期・2017年冬学期）の授業</h3>
   <h4>国際大学 (IUJ)</h4>
   <ul>
-    <li><a href="/classes/ppt/">Positive Political Theory</a></li>
+    <li><a href="/classes/pubadmin/">Public Administration</a></li>
   </ul>
   <h4>神戸大学</h4>
   <ul>
@@ -50,11 +50,11 @@
   
   <h3>過去の授業</h3>
   <ul>
-    <li><a href="rm1">政治学方法論 I</a></li>
-    <li><a href="/classes/rm3/">政治学方法論 III</a> [使用言語：英語]</li>
+    <li><a href="rm1/">政治学方法論 I</a> [2014年度後期, 2015年度後期, 2016年度前期, 神戸大学 法学部 / 法学研究科] </li>
+    <li><a href="/classes/rm3/">政治学方法論 III</a> [2016年度前期, 神戸大学 法学部 / 法学研究科, 使用言語：英語]</li>
     <li><a href="pe1">政治経済学 I</a> [2014年度後期, 2015年後期, 神戸大学 法学部 / 法学研究科] </li>
     <li><a href="pe2/">政治経済学 II</a> [2015年度前期, 神戸大学 法学部 / 法学研究科] </li>
-    <li>政治学方法論 I</a> [2014年度後期, 2015年度後期, 神戸大学 法学部 / 法学研究科] </li>
+    
     <li><a href="rm2/">政治学方法論 II</a> [2015年度前期, 神戸大学 法学部 / 法学研究科] </li>
     <li><a href="pp1/">政治過程論 I</a> [2015年度前期, 甲南大学 法学部]</li>
     <li>政治学英語文献研究（応用） [2014年度前期, 早稲田大学 政治経済学部]</li>
@@ -78,7 +78,7 @@
     </tr>
     <tr>
       <td align="left">&nbsp;&nbsp;Email: yanai [at] iuj.ac.jp</td>
-      <td align="right"> &copy; 2014-2016 Yuki Yanai&nbsp;&nbsp;</td>
+      <td align="right"> &copy; 2014-2017 Yuki Yanai&nbsp;&nbsp;</td>
     </tr>
     </table>
   <!-- end .footer --> </div>
