--- a/jp/classes/rm1/contents/index.html
+++ b/jp/classes/rm1/contents/index.html
@@ -82,7 +82,7 @@
       <ul>
         <li><a href="R/literate-programming.html">Rマークダウンを用いた文芸的プログラミング入門</a></li>
         <li><a href="slides/rm1-slides-lec06.pdf">講義スライド</a></li>
-        <li><a href="rm1-assignment06.html">課題6と受講生の解答</a></li>
+        <!-- <li><a href="rm1-assignment06.html">課題6と受講生の解答</a></li> -->
       </ul>
       
     <h3>7. ウェブスクレイピングによるデータ収集</h3>
@@ -131,7 +131,7 @@
     </tr>
     <tr>
       <td align="left">&nbsp;&nbsp;Email: yanai [at] iuj.ac.jp</td>
-      <td align="right"> &copy; 2014-2016 Yuki Yanai&nbsp;&nbsp;</td>
+      <td align="right"> &copy; 2014-2017 Yuki Yanai&nbsp;&nbsp;</td>
     </tr>
     </table>
   <!-- end .footer --> </div>
