Revise the syllabus for public admin

--- a/classes/pubadmin/index.html
+++ b/classes/pubadmin/index.html
@@ -39,7 +39,7 @@
     <p>Graduate School of International Relations, International University of Japan, Winter 2017</p>
   <br>
 
-  <h4><a class="black" href="docs/syllabus-PubAdmin-2017winter.pdf">Syllabus</a></h4>
+  <h4><a class="black" href="docs/syllabus-PubAdmin-2017winter.pdf">Syllabus (revised on 2017-01-18)</a></h4>
      <br>
   
   <h3>Overview and Class Goals</h3>
