Fix broken link

--- a/teaching/index.html
+++ b/teaching/index.html
@@ -55,7 +55,7 @@
     <li><a href="/jp/classes/rm1/" target="_blank">Research Methods in Political Science I</a> (u &amp; g) [taught in Japanese], Kobe University (Fall 2014, Spring 2016)</li>
     <li><a href="rm2-2016/" target="_blank">Research Methods in Political Science II</a> (u &amp; g) [taught in English], Kobe University (Fall 2016)</li>
     <li><a href="/jp/classes/rm2/" target="_blank">Research Methods in Political Science II</a> (u &amp; g) [taught in Japanese], Kobe University (Spring 2015)</li>
-    <li><a href="/classes/rm3/" target="_blank">Research Methods in Political Science III</a> (u &amp; g) [taught in English], Kobe University (Spring 2016)</li>
+    <li><a href="rm3/" target="_blank">Research Methods in Political Science III</a> (u &amp; g) [taught in English], Kobe University (Spring 2016)</li>
     <li><a href="/jp/classes/pp1/" target="_blank">Political Process I</a> (u), Konan University (Spring 2015)</li>
     <li>English Readings in Political Science (u), Waseda University (Spring 2014)</li>
     <li>Theories of Modern Democracy A, B (u), Takushoku University (Spring 2014)</li>
