Fix a  broken link

--- a/jp/classes/index.html
+++ b/jp/classes/index.html
@@ -47,7 +47,7 @@
   <h3>過去の授業</h3>
   <h4>国際大学 (IUJ)</h4>
   <ul>
-    <li><a href="/classes/pubadmin/">Public Administration</a></li>
+    <li><a href="/teaching/pubadmin/">Public Administration</a></li>
   </ul>
   <h4>他大学</h4>
   <ul>
