Fix a broken link

--- a/jp/classes/index.html
+++ b/jp/classes/index.html
@@ -54,7 +54,7 @@
     <li><a href="rm1/">政治学方法論 I</a> [2014年度後期, 2016年度前期, 神戸大学 法学部 / 法学研究科] </li>
     <li><a href="/teaching/rm1/">Research Methods in Political Science I</a> [2015年度後期, 神戸大学 法学部 / 法学研究科] </li>
     <li><a href="rm2/">政治学方法論 II</a> [2015年度前期, 神戸大学 法学部 / 法学研究科] </li>
-    <li><a href="/teaching/rm2/">Research Methods in Political Science II</a> [2016年度後期, 神戸大学 法学部 / 法学研究科] </li>
+    <li><a href="/teaching/rm2-2016/">Research Methods in Political Science II</a> [2016年度後期, 神戸大学 法学部 / 法学研究科] </li>
     <li><a href="/teaching/rm3/">Research Methods in Political Science III</a> [2016年度前期, 神戸大学 法学部 / 法学研究科]</li>
     <li><a href="pe1">政治経済学 I （政治経済学）</a> [2014年度後期, 2015年度後期, 2016年度後期, 神戸大学 法学部 / 法学研究科] </li>
     <li><a href="pe2/">政治経済学 II</a> [2015年度前期, 神戸大学 法学部 / 法学研究科] </li>
