--- a/cv/index.html
+++ b/cv/index.html
@@ -58,7 +58,7 @@
     <li>Ph.D. in Political Science, Department of Political Science, University of California, Los Angeles (Mar 2017)</li>
     <li>
         <p>Dissertation: <i>Misperceived Inequality, Mismatched Attitudes, and Missing Support for Redistribution.</i></p>
-        <p>Committee: Miriam A. Golden (chair), Michael F. Thies, Christopher C. Tilly.</p>
+        <p>Committee: <a href="https://www.golden.polisci.ucla.edu/" target="_blank">Miriam A. Golden</a> (chair), <a href="http://thies.bol.ucla.edu/Home.html" target="_blank">Michael F. Thies</a>, <a href="http://luskin.ucla.edu/person/chris-tilly/" target="_blank">Christopher C. Tilly</a>.</p>
     </li>
     <li>C.Phil. in Political Science, Department of Political Science, University of California, Los Angeles (Dec 2009)</li>
     <li>M.A. in Political Science, Department of Political Science, University of California, Los Angeles (Dec 2008)</li>
