--- a/jp/publications/index.html
+++ b/jp/publications/index.html
@@ -55,8 +55,12 @@
   <h3>分担執筆</h3>
   
   <ul>
-  <li>How Do Economic Crises Affect Electoral Choices? Analysing Voting Behavior in the British General Elections of 2010, in Hideko Magara (ed) <a class="booktitle" href="http://www.e-elgar.co.uk/bookentry_main.lasso?id=15547/" target="_blank">Economic Crises and Policy Regimes: The Dynamics of Policy Innovation and Paradigmatic Change</a> (May 2014: Edward Elgar) [<a class="abst" href="abstracts/elections-in-crises.html" target="_blank">要旨</a>]
-　　　<div class="exp">ISBN: 978-1-782-54991-8&nbsp;&nbsp; <a href="http://amazon.co.jp/dp/1782549919/" target="_blank">amazon.co.jp</a>で購入できます.</div></li>
+  
+   <li>Political Reformation of Social Coalitions for Elections. In Hideko Magara and Bruno Amable, eds. <a class="booktitle" href="https://www.routledge.com/Growth-Crisis-Democracy-The-Political-Economy-of-Social-Coalitions-and/Magara-Amable/p/book/9781138222182" target="_blank">Growth, Crisis, and Democracy: The Political Economy of Social Coalitions and Policy Regime Change</a> (July 2017: Routledge) <!--[<a class="abst" href="abstracts/BLAHBLAH.html" target="_blank">要旨</a>]-->
+          <div class="exp">ISBN: 978-1138222182&nbsp;&nbsp; <a href="http://amazon.co.jp/dp/1138222186/" target="_blank">amazon.co.jp</a>で購入できます.</div></li>
+  
+    <li>How Do Economic Crises Affect Electoral Choices? Analysing Voting Behavior in the British General Elections of 2010, in Hideko Magara (ed) <a class="booktitle" href="http://www.e-elgar.co.uk/bookentry_main.lasso?id=15547/" target="_blank">Economic Crises and Policy Regimes: The Dynamics of Policy Innovation and Paradigmatic Change</a> (May 2014: Edward Elgar) [<a class="abst" href="abstracts/elections-in-crises.html" target="_blank">要旨</a>]
+<div class="exp">ISBN: 978-1-782-54991-8&nbsp;&nbsp; <a href="http://amazon.co.jp/dp/1782549919/" target="_blank">amazon.co.jp</a>で購入できます.</div></li>
         
         <li>Governance with a Twist: How Bicameralism Affects Japanese Lawmaking (<a href="http://www.thies.bol.ucla.edu/" target="_blank">Michael F. Thies</a> 氏と共著), in Robert Pekkanen, Steven R. Reed, and Ethan Scheiner (eds) <a class="booktitle" href="http://www.palgrave.com/page/detail/japan-decides-2012-robert-pekkanen/?K=9781137348517" target="_blank">Japan Decides 2012: The Japanese General Election</a> (July 2013: Palgrave Macmillan)  [<a class="abst" href="abstracts/governance-with-a-twist.html" target="_blank">要旨</a>]
         <div class="exp">ISBN: 978-1-137-34851-7&nbsp;&nbsp; ハードカバー版は<a href="http://amazon.co.jp/dp/1137348518/" target="_blank">amazon.co.jp</a>で、電子書籍版 (PDF or EPUB) は <a href="http://www.palgrave.com/page/detail/japan-decides-2012-robert-pekkanen/?K=9781137348517" target="_blank">Palgrave Macmillanのウェブサイト</a>で購入できます.</div></li>
