update course offering

--- a/teaching/lgps/index.html
+++ b/teaching/lgps/index.html
@@ -18,7 +18,7 @@
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
   <a class="white-red" href="/cv/">cv</a>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red" href="/publications/">publications</a>
+  <a class="white-red" href="/research/">research</a>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
   <!--<a class="white-red" href="/research/">research</a>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;-->
@@ -36,10 +36,10 @@
 
   <h2>Local Government and Public Services (ADC5376)</h2>
   
-    <p>Graduate School of International Relations, International University of Japan, Spring 2017</p>
+    <p>Graduate School of International Relations, International University of Japan, Fall 2017</p>
   <br>
 
-  <h4><a class="black" href="docs/syllabus-LGPS-2017spring.pdf">Syllabus</a> (updated: 2017-04-13)</h4>
+  <h4><a class="black" href="docs/syllabus-LGPS-2017fall.pdf">Syllabus</a> (updated: 2017-09-15)</h4>
      <br>
   
   <h3>Overview and Class Goals</h3>
