--- a/teaching/index.html
+++ b/teaching/index.html
@@ -35,9 +35,8 @@
   <div class="content">
   <h2>Courses</h2>
   
-  <h3>Current (Spring 2017)</h3>
+  <h3>Current (Fall 2017)</h3>
   <ul>
-    <li><a href="methodology/" target="_blank">Research Methodology</a></li>
     <li><a href="lgps/" target="_blank">Local Government and Public Services</a></li>
     <!-- <li><a href="stata/" target="_blank">Data Visualization and Statistics with Stata (and R)</a> [special lectures for JDS students]</li> -->
   </ul>
@@ -45,9 +44,13 @@
   <h4>IUJ</h4>
   <ul>
     <li><a href="pubadmin/" target="_blank">Public Administration</a> (Winter 2017)</li>
+    <li><a href="methodology/" target="_blank">Research Methodology</a> (Spring 2017)</li>
+    <li>Local Government and Public Services (Spring 2017)</li>
+    <li>Data Visualization and Statistics with Stata: Sspecial lectures for JDS students (Winter 2017)</li>
   </ul>
   <h4>Other Universities</h4>
   <ul>
+    <!--<li>Comparative Politics A &amp; B, Kobe University (Summer 2017)</li> -->
     <li><a href="/jp/classes/pe/" target="_blank">Basics of Political Economy</a> (u &amp; g), Kobe University (Fall 2016)</li>
     <li><a href="/jp/classes/pe1/" target="_blank">Political Economy I</a> (u &amp; g), Kobe University (Fall 2014, Fall 2015) </li>
     <li><a href="/jp/classes/pe2/" target="_blank">Political Economy II</a> (u &amp; g), Kobe University (Spring 2015)</li>
