--- a/teaching/pubadmin/index.html
+++ b/teaching/pubadmin/index.html
@@ -18,7 +18,7 @@
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
   <a class="white-red" href="/cv/">cv</a>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red" href="/publications/">publications</a>
+  <a class="white-red" href="/research/">research</a>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
   <a class="white-red" href="/teaching/">teaching</a>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
