add link to Ko Maeda's website

--- a/jp/resources/scrape-hr2017.html
+++ b/jp/resources/scrape-hr2017.html
@@ -11,7 +11,6 @@
 
 <meta name="author" content="矢内 勇生 (yukiyanai.com)" />
 
-<meta name="date" content="2017-10-23" />
 
 <title>第48回衆議院議員総選挙データ: 2017 Japanese General Election Data</title>
 
@@ -149,7 +148,7 @@ $(document).ready(function () {
 <h1 class="title toc-ignore">第48回衆議院議員総選挙データ: 2017 Japanese General Election Data</h1>
 <h3 class="subtitle"><em>Rによる2017年衆院選（2017年10月22日実施）データのスクレイピング</em></h3>
 <h4 class="author"><em>矢内 勇生 (<a href="http://yukiyanai.com">yukiyanai.com</a>)</em></h4>
-<h4 class="date"><em>2017-10-23</em></h4>
+<h4 class="date"><em>2017-10-23 (rev: 2017-10-24)</em></h4>
 
 </div>
 
@@ -200,6 +199,7 @@ $(document).ready(function () {
 <li>votes: 獲得得票数</li>
 <li>voshare: 選挙区内での得票率 (%)</li>
 </ul>
+<p><strong>（2017-10-24 追記）</strong> 小選挙区のデータについては、私の集めた情報を元に変数名等を編集したものが、University of North Texas 准教授の<a href="http://politicalscience.unt.edu/~maeda/">前田耕さんのウェブサイト</a>で手に入ります。前回までの選挙データと整合性があり、コードブックも付いていて便利です。 English version of the SMD results is availabe at <a href="http://politicalscience.unt.edu/~maeda/">Prof. Ko Maeda’s website</a>.</p>
 </div>
 <div id="-pr-blocks-candidates" class="section level3">
 <h3>比例区：候補者別 (PR Blocks: Candidates)</h3>
