--- a/teaching/index.html
+++ b/teaching/index.html
@@ -46,7 +46,7 @@
     <li><a href="pubadmin/" target="_blank">Public Administration</a> (Winter 2017)</li>
     <li><a href="methodology/" target="_blank">Research Methodology</a> (Spring 2017)</li>
     <li>Local Government and Public Services (Spring 2017)</li>
-    <li>Data Visualization and Statistics with Stata: Sspecial lectures for JDS students (Winter 2017)</li>
+    <li>Data Visualization and Statistics with Stata: Special lectures for JDS students (Winter 2017)</li>
   </ul>
   <h4>Other Universities</h4>
   <ul>
